# jni-gradle-external-cpp

./: build.gradle  build.sh  settings.gradle
JNILib_cpp/: CMakeLists.txt  JNILib_Library.cpp  JNILib_Library.h
src/main/java/JNILib/: Library.java
src/test/java/JNILib/: LibraryTest.java
